--- a/style.css
+++ b/style.css
@@ -31,3 +31,11 @@ padding-left: 2%;
     background-image: url(top-banner.png);
     background-repeat: no-repeat;
 }
+dream-big{
+    display: flex;
+}
+.dream-big{
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
+}
