--- a/style.css
+++ b/style.css
@@ -10,13 +10,15 @@ H1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
 
     display: flex;
+    margin-bottom: 100;
 }
 .jam{
 padding-left: 2%;
     width: 80%;
+    
 }
 .link-button{
     text-decoration: none;
@@ -31,6 +33,12 @@ padding-left: 2%;
     background-image: url(top-banner.png);
     background-repeat: no-repeat;
 }
+.Exprience{
+
+    background-image: url(exp-bg.png);
+    background-repeat: no-repeat;
+    background-position:left ;
+}
 dream-big{
     display: flex;
 }
@@ -38,4 +46,27 @@ dream-big{
     background-image: url(dream-bg.png);
     background-repeat: no-repeat;
     background-position:right;
+}
+.kathal{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    margin-bottom: 5%;
+    box-shadow: 10px 10px 40px gray;
+    
+    
+}
+#fusca{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, red);
+    border-image-slice: 1;
+}
+#cotpoti{
+
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+
+
 }
